added more memory to Gradle and Gatling