@@ -12,6 +12,14 @@ dependencies {
     testImplementation 'org.spockframework:spock-core:2.4-groovy-5.0'
 }
 
+gatling {
+    jvmArgs = [
+        '-Xmx2G',
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED'
+    ]
+}
+
 testing {
     suites {
         test {
